test/2-error/sym-double-dash.test
{
  'compile-err': '''\
parse error: test/2-error/sym-double-dash.ploy:1:3: symbols cannot contain repeated '-' characters.
  a--
    ^
''',
  'compile-code': 1
}
